[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/paddle.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/paddletriangle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/circlepaddle.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.4227, 53.6634 )

[sub_resource type="CircleShape2D" id=2]
radius = 37.9934

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TrianglePaddle" type="Sprite" parent="."]
visible = false
position = Vector2( 57, 0 )
texture = ExtResource( 3 )

[node name="CirclePaddle" type="Sprite" parent="."]
visible = false
position = Vector2( 56, 0 )
texture = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 28.9701, -1.19055 )
shape = SubResource( 2 )
disabled = true

[node name="TriangleCollisionShape" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.646143, -0.181454 )
scale = Vector2( 1.03405, 1.01523 )
polygon = PoolVector2Array( -8.52524, -54.1944, 46.4756, -0.977417, -7.33603, 53.4288 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
